--- a/1style.css
+++ b/1style.css
@@ -1,3 +1,8 @@
+@font-face{
+    font-family: "Worksans";
+    src: url('WorkSans-VariableFont_wght.ttf') format('truetype');
+}
+
 body,html{
     width: 100%;
     height: 100%;
