--- a/2style.css
+++ b/2style.css
@@ -13,3 +13,42 @@ html,body{
     padding: 0;
     margin: 0;
 }
+
+main{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background-color: #ECEEF0;
+}
+
+
+.sign-in{
+    width: 35rem;
+    height: 8rem;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    background-image: url("background.jpg");
+    background-color: rgba(0, 0, 0, 0.856);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.sign-text{
+    color: rgb(255, 255, 255);
+}
+
+.inputs-container{
+    background-color: #fff;
+    height: 20rem;
+    padding-top:3rem ;
+    display: flex;
+    justify-content: center;
+
+}
