inputs html base frame created

--- a/2style.css
+++ b/2style.css
@@ -24,7 +24,7 @@ main{
     background-color: #ECEEF0;
 }
 
-.sign-in-dark{
+.sign-in-frontshadow{
     width: 35rem;
     height: 8rem;
     border-top-left-radius: 1rem;
