--- a/3style.css
+++ b/3style.css
@@ -15,3 +15,16 @@ html,body{
     box-sizing: border-box;
     font-family: "Worksans";
 }
+
+.bg{
+    width: 100%;
+    height: 100%;
+    background-image: url("backgroung.jpg");
+    
+}
+
+.bg-frontshadow{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.808);
+}
