--- a/3style.css
+++ b/3style.css
@@ -20,6 +20,9 @@ html,body{
     width: 100%;
     height: 100%;
     background-image: url("backgroung.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     
 }
 
@@ -27,4 +30,113 @@ html,body{
     width: 100%;
     height: 100%;
     background-color: rgba(255, 255, 255, 0.808);
+}
+
+.main-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.login-form{
+    width: 25rem;
+    height: 35rem;
+    background: rgb(166,55,233);
+    background: linear-gradient(0deg, rgba(166,55,233,0.9500175070028011) 0%, rgba(120,124,253,0.95) 100%);
+    border-radius: 0.5rem;
+    display: flex;
+    align-items: center;
+    padding-top:4rem ;
+    flex-direction: column;
+}
+
+.fas{
+    color: white;
+}
+
+.logo{
+    width: 7rem;
+    height: 7rem;
+    border-radius: 50%;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo-img{
+    width: 5rem;
+    height: 5rem;
+}
+
+.login-text{
+    color: whitesmoke;
+}
+
+.inputs{
+    display: flex;
+}
+
+.input-icon{
+    border-bottom: 0.1rem solid rgba(255, 255, 255, 0.63);
+    margin-bottom: 1.5rem;
+    padding-top: 0.5rem;
+    padding-left: 0.1rem;
+    font-size: 0.85rem;
+}
+
+.input-text{
+    border: none;
+    border-bottom: 0.1rem solid rgba(255, 255, 255, 0.63);
+    outline: none;
+    background-color: transparent;
+    width: 19rem;
+    height: 2rem;
+    margin-bottom: 1.5rem;
+    padding-left: 0.5rem;
+    color: white;
+}
+
+.input-text::placeholder{
+    color: white;
+}
+
+.remember-container{
+    display: flex;
+    align-items: center;
+    width: 20rem;
+}
+
+.remember-text{
+    text-align: center;
+    color: white;
+    font-size: 0.65rem;
+}
+
+.btn-div{
+    padding-top: 1rem;
+}
+
+.input-btn{
+    border-radius: 1rem;
+    width: 6.5rem;
+    height: 2.2rem;
+    border: 1px solid transparent;
+    outline: transparent;
+}
+
+.input-btn:hover{
+    cursor: pointer;
+}
+
+.forgot-link{
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    font-size: 0.7rem;
+}
+
+.forgot{
+    padding-top: 6rem;
 }
