--- a/4style.css
+++ b/4style.css
@@ -14,3 +14,58 @@ html,body{
     font-family: "Worksans";
     box-sizing: border-box;
 }
+
+.main{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #689898;
+}
+
+.main-container{
+    width: 55rem;
+    height: 40rem;
+    display: flex;
+    background-color: #689898;
+    /* display: flex; */
+}
+
+
+.left-container{
+    position: absolute;
+    float: left;
+    align-self: flex-start;
+    width: 26rem;
+    height: 0;
+    border-left: 0rem solid transparent;
+    border-right: 5rem solid transparent;
+    border-top: 40rem solid #225C66;
+}
+
+.right-container{
+    width: 100%;
+    height: 100%;
+    background-color: #FEBA33;
+}
+
+.bg{
+    width: 19rem;
+    height: auto;
+    position: absolute;
+    bottom: 9rem;
+    left: 1rem;
+}
+
+.shadow-bg{
+    position: absolute;
+    bottom: 15.5rem;
+    right: 5rem;
+    border-bottom: 10rem solid #ffe76d1f;
+    border-left: 4rem solid transparent;
+    border-right: 4rem solid transparent;
+    height: 0;
+    width: 28rem;
+    transform: rotate(90deg);
+}
