--- a/4style.css
+++ b/4style.css
@@ -48,6 +48,7 @@ html,body{
     width: 100%;
     height: 100%;
     background-color: #FEBA33;
+    display: flex;
 }
 
 .bg{
@@ -62,10 +63,75 @@ html,body{
     position: absolute;
     bottom: 15.5rem;
     right: 5rem;
-    border-bottom: 10rem solid #ffe76d1f;
+    border-bottom: 10rem solid #ffe76d11;
     border-left: 4rem solid transparent;
     border-right: 4rem solid transparent;
     height: 0;
     width: 28rem;
     transform: rotate(90deg);
 }
+
+.login-container{
+    width: 60%;
+    height: 100%;
+    background-color: transparent;
+    margin-left: 23rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.login-box{
+width: 16rem;
+height: 18rem;
+background-color: rgb(255, 255, 255);
+border-radius: 1.1rem;
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+.help-div{
+    margin-left: 0.7rem;
+    margin-right: 0.7rem;
+    margin-top: 0.6rem;
+    display: flex;
+    text-align: center;
+}
+
+.member-text{
+    font-size: 0.7rem;
+    color: #fee033;
+}
+
+.help-link{
+    font-size: 0.6rem;
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.404);
+    padding-left: 4.3rem;
+    margin-top: 0.9rem;
+}
+
+.line{
+    width: 100%;
+    height: 0.35rem;
+    background: rgb(0,0,0);
+    background: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.08) 100%);
+}
+
+
+/* .fa-eye-slash{
+    color: rgba(0, 0, 0, 0.123);
+    border: 0.2rem solid rgba(0, 0, 0, 0.055);
+    border-left: none;
+    border-top-right-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+}
+
+.fa-eye-slash:active{
+    color: black;
+}
+
+.fa-eye-slash:hover{
+    cursor: pointer;
+} */
