--- a/4style.css
+++ b/4style.css
@@ -117,13 +117,48 @@ align-items: center;
     height: 0.35rem;
     background: rgb(0,0,0);
     background: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.08) 100%);
+    margin-bottom: 0.5rem;
+}
+
+.inputs-div{
+    border: 0.15rem solid rgba(0, 0, 0, 0.010);
+    border-radius: 0.15rem;
+    margin-bottom: 0.5rem;
+    background-color: rgba(0, 0, 0, 0.025);
 }
 
 
-/* .fa-eye-slash{
+.input-text{
+    outline: none;
+    border: 1px solid transparent;
+    width: 12rem;
+    height: 2.8rem;
+    padding-left: 1rem;
+    background-color: transparent;
+}
+
+.input-text::placeholder{
+color: rgba(0, 0, 0, 0.15);
+font-size: 0.75rem;
+}
+
+.input-text:focus{
+    border: 1px solid transparent;
+    color: #fee033;
+    font-size: 1rem;
+}
+
+.user-input{
+    width: 14rem;
+}
+
+.user-input-div{
+    margin-top: 0.5rem;
+}
+
+.fa-eye-slash{
     color: rgba(0, 0, 0, 0.123);
-    border: 0.2rem solid rgba(0, 0, 0, 0.055);
-    border-left: none;
+    padding-right: 0.5rem;
     border-top-right-radius: 0.5rem;
     border-bottom-right-radius: 0.5rem;
 }
@@ -134,4 +169,29 @@ align-items: center;
 
 .fa-eye-slash:hover{
     cursor: pointer;
-} */
+}
+
+.btn-input-div{
+    padding-top: 2rem;
+}
+
+.btn-input{
+    width: 14rem;
+    height: 2.8rem;
+    background-color: #1A535C;
+    color: white;
+    border-radius: 0.2rem;
+    border: 1px solid transparent;
+}
+
+.create-div{
+    text-align: center;
+    margin-top: 3rem;
+    color: #FFF;
+    font-size: 0.8rem;
+}
+
+.create-link{
+    color: black;
+    text-decoration: none;
+}
