--- a/4style.css
+++ b/4style.css
@@ -79,6 +79,7 @@ html,body{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .login-box{
@@ -115,7 +116,7 @@ align-items: center;
 .line{
     width: 100%;
     height: 0.35rem;
-    background: rgb(0,0,0);
+    background: rgb(0, 0, 0);
     background: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.08) 100%);
     margin-bottom: 0.5rem;
 }
@@ -194,4 +195,4 @@ font-size: 0.75rem;
 .create-link{
     color: black;
     text-decoration: none;
-}
+} 
