--- a/5style.css
+++ b/5style.css
@@ -85,3 +85,71 @@ html,body{
     color: #EC576D;
     cursor: pointer;
 }
+
+.post-container{
+    width: 98%;
+    margin-left: 1%;
+    margin-top: 2%;
+    background-color: rgb(160, 9, 9);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.post{
+    width: 23%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.img-post{
+    width: 100%;
+    height: 35rem;
+    background-image: url("image1.jpg");
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    border-radius: 0.1rem;
+    position: relative;
+}
+
+.counter-info{
+    width: 40%;
+    height: auto;
+    padding: 0.5rem;
+    margin: 1rem;
+    background-color: #6E6CF0;
+    border-radius: 2rem;
+    display: flex;
+    justify-content: center;
+    color: white;
+    text-align: center;
+}
+
+.counter-icon{
+    margin-right: 0.7rem;
+    font-size: 0.9rem;
+    font-weight: 0.5rem;
+}
+
+.last-counter-icon{
+    margin-right: 0;
+}
+
+.title-post{
+
+   width: 90%;
+   position: absolute;
+   left: 5%;
+   right: 5%;
+   bottom: 8%;
+}
+
+.title-post-text{
+    font-size: 2rem;
+    background-color: #fff;
+    display: inline;
+}
